Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

14-Jul-2010 Jean-Marie Simonet
 # [#21398] [Hathor] saveOrder should be $saveOrder. Thanks Viet.
 # [#21342] JDocumentRendererHead can generate empty meta description. Thanks Janich.
 # [#21374] Updates to Hathor that were not done when core was updated. Thanks Andrea and Michael.

14-Jul-2010 Mark Dexter
# Sample data fixes (Elin Waring)
# Fix joomla.sql table for missing row and lft, rgt values (Seline Feigl)
# [#21286] com_banner test code clean up in category.xml

13-Jul-2010 Jean-Marie Simonet
 # [#20760] *Contact Manager Options > Contact List parameters
 # [#21377] error caused by page break without readmore (see on visiting component menu item in sample data)
 # [#21382] Fallback template is rhuk_milkyway, not beez_20, and doesn't load properly.
 # [#21371] Restore 1.5 ability for multiple categories for Latest Articles Module. Thanks Amy
 # [#21215] Consistency in module layouts. Thanks Bill.
 
13-Jul-2010 Mark Dexter
# [#21083] Category List menu link to unpublished category gives error

-------------------- 1.6.0 Beta5 Release [12-Jul-2010] ------------------

12-Jul-2010 Ian MacLennan
 # [#20507] SEF w/o .htaccess causes loss of css formatting and/or 404 errors
 # [#21031] A number of not well formed errors in the backend

12-Jul-2010 Mark Dexter
 # [#21196] Save order disk not disabled when not in ordering sort
 # [#20963] Articles » List All Categories and Rss not working
 # [#21332] com_contact tabs aren't working in IE7 Patch
 # [#20957] Batch processing of users is using old tables
 # [#21317] Deleting a category does not delete it's asset
 # [#21214] Editing an article in front-end displays default site template
 # [#21356] Sorting and filtering in "Contacts" and "Newsfeeds" modals
 # [#21289] Missing Cache Manager Error Message
 # [#21359] Search Button Image in mod_search is not showing properly

12-Jul-2010 Jean-Marie Simonet