@@ -63,7 +63,7 @@ class BannersViewBanner extends JView
 		if (!$checkedOut && $canDo->get('core.edit')) {
 			JToolBarHelper::apply('banner.apply', 'JTOOLBAR_APPLY');
 			JToolBarHelper::save('banner.save', 'JTOOLBAR_SAVE');
-			JToolBarHelper::addNew('banner.save2new', 'JTOOLBAR_SAVE_AND_NEW');
+			JToolBarHelper::custom('banner.save2new', 'save-new.png', 'save-new_f2.png', 'JTOOLBAR_SAVE_AND_NEW', false);
 		}
 		// If an existing item, can save to a copy.
 		if (!$isNew && $canDo->get('core.create')) {
