@@ -61,7 +61,7 @@ class CategoriesViewCategory extends JView
 		if ($this->item->checked_out == 0 || $this->item->checked_out == $user->get('id')) {
 			JToolBarHelper::apply('category.apply', 'JTOOLBAR_APPLY');
 			JToolBarHelper::save('category.save', 'JTOOLBAR_SAVE');
-			JToolBarHelper::addNew('category.save2new', 'JTOOLBAR_SAVE_AND_NEW');
+			JToolBarHelper::custom('category.save2new', 'save-new.png', 'save-new_f2.png', 'JTOOLBAR_SAVE_AND_NEW', false);
 		}
 
 		// If an existing item, can save to a copy.
