@@ -62,11 +62,11 @@ class NewsfeedsViewNewsfeed extends JView
 		if (!$checkedOut && $canDo->get('core.edit')) {
 			JToolBarHelper::apply('newsfeed.apply', 'JTOOLBAR_APPLY');
 			JToolBarHelper::save('newsfeed.save', 'JTOOLBAR_SAVE');
-			JToolBarHelper::addNew('newsfeed.save2new', 'JTOOLBAR_SAVE_AND_NEW');
+			JToolBarHelper::custom('newsfeed.save2new', 'save-new.png', 'save-new_f2.png', 'JTOOLBAR_SAVE_AND_NEW', false);
 		}
 			// If an existing item, can save to a copy.
 		if (!$isNew && $canDo->get('core.create')) {
-			JToolBarHelper::custom('newsfeed.save2copy', 'copy.png', 'copy_f2.png', 'JTOOLBAR_SAVE_AS_COPY', false);
+			JToolBarHelper::custom('newsfeed.save2copy', 'save-copy.png', 'save-copy_f2.png', 'JTOOLBAR_SAVE_AS_COPY', false);
 		}
 
 		if (empty($this->item->id))  {
