@@ -58,7 +58,7 @@ class UsersViewUser extends JView
 		JToolBarHelper::title(JText::_($isNew ? 'COM_USERS_VIEW_NEW_USER_TITLE' : 'COM_USERS_VIEW_EDIT_USER_TITLE'), 'user-add');
 		JToolBarHelper::apply('user.apply','JTOOLBAR_APPLY');
 		JToolBarHelper::save('user.save','JTOOLBAR_SAVE');
-		JToolBarHelper::addNew('user.save2new', 'JTOOLBAR_SAVE_AND_NEW');
+		JToolBarHelper::custom('user.save2new', 'save-new.png', 'save-new_f2.png', 'JTOOLBAR_SAVE_AND_NEW', false);
 		if (empty($this->item->id))  {
 			JToolBarHelper::cancel('user.cancel','JTOOLBAR_CANCEL');
 		} else {
