@@ -31,6 +31,7 @@ $ -> Language fix or change
  # [#21398] [Hathor] saveOrder should be $saveOrder. Thanks Viet.
  # [#21342] JDocumentRendererHead can generate empty meta description. Thanks Janich.
  # [#21374] Updates to Hathor that were not done when core was updated. Thanks Andrea and Michael.
+ # [#21329] com_modules save-as-new with wrong icon
 
 14-Jul-2010 Mark Dexter
 # Sample data fixes (Elin Waring)
